# vaccine-tsp

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
data/: cityData.csv  smallCityData.csv
include/: particle.h
package/: tsp  vaccine_distribution.sh
src/: CMakeLists.txt  CStopWatch.cpp  CStopWatch.h  a.out  cityData.cpp  cityData.h  fitnessFunc.cpp  main.cpp  particle.cpp  particle.h  pso.cpp
test/: 1000_150_1.txt  1000_150_16.txt  1000_150_4.txt  1000_150_8.txt  100_10_1.txt  100_10_16.txt  100_10_4.txt  100_10_8.txt  100_150_1.txt  100_150_16.txt  100_150_4.txt  100_150_8.txt  100_25_1.txt  100_25_16.txt  100_25_4.txt  100_25_8.txt
