cmake_minimum_required(VERSION 3.0)
PROJECT(vaccine-tsp, VERSION 1.0.0)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/debug/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/)
set(CMAKE_CXX_FLAGS "-std=c++17 -fopenmp")
set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -DNDEBUG")
ADD_SUBDIRECTORY(src)