cmake_minimum_required(VERSION 3.0)
PROJECT(vaccine-tsp, VERSION 1.0)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/debug/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -DNDEBUG")
ADD_SUBDIRECTORY(src)
include(InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "${Tsp_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${Tsp_VERSION_MINOR}")
include(CPack)

enable_testing()
set(CTEST_PARALLEL_LEVEL 1)

add_test(NAME 100/10/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 10 1000 1 60)
add_test(NAME 100/10/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 10 1000 4 60)
add_test(NAME 100/10/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 10 1000 8 60)
add_test(NAME 100/10/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 10 1000 16 60)

add_test(NAME 100/25/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 25 1000 1 60)
add_test(NAME 100/25/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 25 1000 4 60)
add_test(NAME 100/25/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 25 1000 8 60)
add_test(NAME 100/25/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 25 1000 16 60)

add_test(NAME 100/150/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 150 1000 1 60)
add_test(NAME 100/150/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 150 1000 4 60)
add_test(NAME 100/150/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 150 1000 8 60)
add_test(NAME 100/150/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 100 5 150 1000 16 60)

add_test(NAME 1000/150/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 1000 5 150 1000 1 60)
add_test(NAME 1000/150/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 1000 5 150 1000 4 60)
add_test(NAME 1000/150/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 1000 5 150 1000 8 60)
add_test(NAME 1000/150/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" 1000 5 150 1000 16 60)