cmake_minimum_required(VERSION 3.0)
PROJECT(vaccine-tsp, VERSION 1.0.0 DESCRIPTION "tsp for vaccine distribution"
HOMEPAGE_URL darthfalcon.com LANGUAGES CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/debug/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -DNDEBUG -m64")
ADD_SUBDIRECTORY(src)
include(InstallRequiredSystemLibraries)
include(CPack)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_DIRECTORY ${CMAKE_SOURCE_DIR}/package/)
set(CPACK_PACKAGE_DESCRIPTION "Particle Swarm Optimization for Vaccine Distribution (Traveling Salesman Problem)")
set(CPACK_PACKAGE_FILE_NAME vaccine_distribution)
cpack_add_component(applications DISPLAY_NAME "Vaccine Distribution" DESCRIPTION "Particle Swarm Optimization for Vaccine Distribution (Traveling Salesman Problem)")

enable_testing()
set(CTEST_PARALLEL_LEVEL 1)

add_test(NAME 100/10/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/smallCityData.csv" "${CMAKE_SOURCE_DIR}/data/100_10_1.txt" 100 5 10 1000 1 60)
add_test(NAME 100/10/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/smallCityData.csv" "${CMAKE_SOURCE_DIR}/data/100_10_4.txt" 100 5 10 1000 4 60)
add_test(NAME 100/10/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/smallCityData.csv" "${CMAKE_SOURCE_DIR}/data/100_10_8.txt" 100 5 10 1000 8 60)
add_test(NAME 100/10/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/smallCityData.csv" "${CMAKE_SOURCE_DIR}/data/100_10_16.txt" 100 5 10 1000 16 60)

add_test(NAME 100/25/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_25_1.txt" 100 5 25 1000 1 60)
add_test(NAME 100/25/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_25_4.txt" 100 5 25 1000 4 60)
add_test(NAME 100/25/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_25_8.txt" 100 5 25 1000 8 60)
add_test(NAME 100/25/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_25_16.txt" 100 5 25 1000 16 60)

add_test(NAME 100/150/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_150_1.txt" 100 5 150 1000 1 60)
add_test(NAME 100/150/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_150_4.txt" 100 5 150 1000 4 60)
add_test(NAME 100/150/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_150_8.txt" 100 5 150 1000 8 60)
add_test(NAME 100/150/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/100_150_16.txt" 100 5 150 1000 16 60)

add_test(NAME 1000/150/1 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/1000_150_1.txt" 1000 5 150 1000 1 60)
add_test(NAME 1000/150/4 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/1000_150_4.txt" 1000 5 150 1000 4 60)
add_test(NAME 1000/150/8 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/1000_150_8.txt" 1000 5 150 1000 8 60)
add_test(NAME 1000/150/16 COMMAND tsp "${CMAKE_SOURCE_DIR}/data/cityData.csv" "${CMAKE_SOURCE_DIR}/data/1000_150_16.txt" 1000 5 150 1000 16 60)